[project] try correct popup on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -43,22 +43,30 @@ section{
 }
 
 .popup {
-	display: none;
-	position: fixed;
+	position: fixed !important;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
-	background: white;
-	padding: 10px;
-	border-radius: 8px;
-	z-index: 1000;
-	box-shadow: 0 8px 16px rgba(0,0,0,0.4);
 	width: 90vw;
 	height: 90vh;
-	overflow: auto;
-	text-align: center;
+	max-width: 90vw;
+	max-height: 90vh;
+	transform: translate(-50%, -50%);
+	z-index: 9999 !important;
+
+	background: rgb(255, 255, 255);
+	overflow-y: auto;
+
 	padding-top: env(safe-area-inset-top);
-  	padding-bottom: env(safe-area-inset-bottom);
+	padding-bottom: env(safe-area-inset-bottom);
+	padding-left: env(safe-area-inset-left);
+	padding-right: env(safe-area-inset-right);
+
+	border-radius: 12px;
+	box-shadow: 0 0 15px rgba(0,0,0,0.5);
+
+	transform-style: preserve-3d;
+	backface-visibility: hidden;
+	will-change: transform;
 }
 
 .popup, .overlay {
@@ -78,7 +86,7 @@ section{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-bottom: 10px;
+	margin: 10px;
 }
 
 .popup-title {
